--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,6 +31,7 @@ subjects:
 - !lcsh 'Cooking -- Periodicals'
 - !lcc 'TX'
 - !lcsh 'Menus -- Periodicals'
+- GITenberg
 title: 'Armour''s Monthly Cook Book, Volume 2, No. 12, October 1913
 
   A Monthly Magazine of Household Interest'
